fixed standard logo being to big on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -804,6 +804,10 @@
     flex-direction: column-reverse;
   }
 
+  .work img {
+    height: 13em;
+  }
+
   .about {
     margin-right: auto;
     flex-direction: column;
